Fix sizing of jumbo at certain cutoff + bad interaction with grey background on some sizes
- The jumbo background was layed over grey-background elements further down, resulting in the background looking like it didnt cover all of its content. z-index: -1 on the jumbo fixes this.
- The minimum height of the jumbo was not adjusted for the new implementation of the slant (needs additional 300 px). Fixed this.

--- a/app/styles/frontpage.scss
+++ b/app/styles/frontpage.scss
@@ -1,11 +1,12 @@
 .jumbo {
   background-color: $jumbo-bg;
   height: calc(85vh + 300px);
-  min-height: 30rem;
+  min-height: calc(30rem + 300px);
   position: relative;
   align-items: center;
   margin-bottom: -300px;
   overflow: hidden;
+  z-index: -1;
 
   @media (min-width: $small-size) and (orientation: landscape) {
     height: calc(45vh + 300px);
